fixed toString method